Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-6728

KILL QUERY executed on an idle connection can interrupt the next query

    XMLWordPrintable

Details

    Description

      --connect (con1,localhost,root,,)
       
      --let $con_id = `SELECT CONNECTION_ID()`
       
      --connection default
       
      eval KILL QUERY $con_id;
       
      --connection con1
       
      --error ER_QUERY_INTERRUPTED
      SELECT * FROM mysql.user;
       
      --disconnect con1

      Result:

      SELECT * FROM mysql.user;
      ERROR 70100: Query execution was interrupted

      Also reproducible on MySQL 5.1-5.6, but seems to have been fixed in 5.7, so there is no point at filing the bug report upstream.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h 40m
                1h 40m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.