MDEV-6728 KILL QUERY executed on an idle connection can interrupt the next query

reset KILL_QUERY when a new query execution is just about to be started